tests/unit-compatibility-test/fixtures/sonarqube/ingress-values.yaml
---
# Source: sonarqube/templates/secret.yaml
---
apiVersion: v1
kind: Secret
metadata:
  name: ingress-values.yaml-sonarqube-monitoring-passcode
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1001
    release: ingress-values.yaml
    heritage: Helm
type: Opaque
data:
  SONAR_WEB_SYSTEMPASSCODE: "dGVzdA=="
---
# Source: sonarqube/templates/secret.yaml
---
apiVersion: v1
kind: Secret
metadata:
  name: ingress-values.yaml-sonarqube-http-proxies
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1001
    release: ingress-values.yaml
    heritage: Helm
type: Opaque
stringData:
  PLUGINS-HTTP-PROXY: ""
  PLUGINS-HTTPS-PROXY: ""
  PLUGINS-NO-PROXY: ""
  PROMETHEUS-EXPORTER-HTTP-PROXY: ""
  PROMETHEUS-EXPORTER-HTTPS-PROXY: ""
  PROMETHEUS-EXPORTER-NO-PROXY: ""
---
# Source: sonarqube/templates/config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: ingress-values.yaml-sonarqube-config
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1001
    release: ingress-values.yaml
    heritage: Helm
data:
  sonar.properties: |
---
# Source: sonarqube/templates/init-sysctl.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: ingress-values.yaml-sonarqube-init-sysctl
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1001
    release: ingress-values.yaml
    heritage: Helm
data:
  init_sysctl.sh: |-
    set -o errexit
    set -o xtrace
    vmMaxMapCount=524288
    if [[ "$(sysctl -n vm.max_map_count)" -lt $vmMaxMapCount ]]; then
      sysctl -w vm.max_map_count=$vmMaxMapCount
      if [[ "$(sysctl -n vm.max_map_count)" -lt $vmMaxMapCount ]]; then
        echo "Failed to set initSysctl.vmMaxMapCount"; exit 1
      fi
    fi
    fsFileMax=131072
    if [[ "$(sysctl -n fs.file-max)" -lt $fsFileMax ]]; then
      sysctl -w fs.file-max=$fsFileMax
      if [[ "$(sysctl -n fs.file-max)" -lt $fsFileMax ]]; then
        echo "Failed to set initSysctl.fsFileMax"; exit 1
      fi
    fi
    nofile=131072
    if [[ "$(ulimit -n)" != "unlimited" ]]; then
      if [[ "$(ulimit -n)" -lt $nofile ]]; then
        ulimit -n $nofile
        if [[ "$(ulimit -n)" -lt $nofile ]]; then
          echo "Failed to set initSysctl.nofile"; exit 1
        fi
      fi
    fi
    nproc=8192
    if [[ "$(ulimit -u)" != "unlimited" ]]; then
      if [[ "$(ulimit -u)" -lt $nproc ]]; then
        ulimit -u $nproc
        if [[ "$(ulimit -u)" -lt $nproc ]]; then
          echo "Failed to set initSysctl.nproc"; exit 1
        fi
      fi
    fi
---
# Source: sonarqube/templates/install-plugins.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: ingress-values.yaml-sonarqube-install-plugins
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1001
    release: ingress-values.yaml
    heritage: Helm
data:
  install_plugins.sh: |-
---
# Source: sonarqube/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-values.yaml-sonarqube
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1001
    release: ingress-values.yaml
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: sonarqube
    release: ingress-values.yaml
---
# Source: sonarqube/templates/sonarqube-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ingress-values.yaml-sonarqube
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1001
    release: ingress-values.yaml
    heritage: Helm
    app.kubernetes.io/name: ingress-values.yaml
    app.kubernetes.io/instance: ingress-values.yaml
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: sonarqube
    app.kubernetes.io/component: ingress-values.yaml-sonarqube
    app.kubernetes.io/version: "2026.5.1-enterprise"
spec:
  replicas: 1
  revisionHistoryLimit: 10
  serviceName: ingress-values.yaml-sonarqube
  selector:
    matchLabels:
      app: sonarqube
      release: ingress-values.yaml
  template:
    metadata:
      annotations:
        checksum/config: d00a05efe69b2d6231a222f560faa04e245a5f0d3c07b9c8a71f239aade2c68f
        checksum/init-sysctl: 229eec308979ae726409e56002f795a59b655e128d8916aae8717b9b6ab79aa7
        checksum/plugins: a081d3ff953a20b339111b228d1a98cd69bb7dae7feee171ee4be9c78f05e97a
        checksum/secret: 678a45a51b5cec20b78c3e05e13c8080cd1961d7910ff123574046de869d9cad
      labels:
        app: sonarqube
        release: ingress-values.yaml
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 0
      initContainers:
        - name: init-sysctl
          image: sonarqube:2026.5.1-enterprise
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
            readOnlyRootFilesystem: true
            runAsUser: 0
          command: ["/bin/bash", "-e", "/tmp/scripts/init_sysctl.sh"]
          volumeMounts:
            - name: init-sysctl
              mountPath: /tmp/scripts/
          env:
            - name: SONAR_WEB_CONTEXT
              value: /
            - name: SONAR_WEB_JAVAOPTS
              value: ""
            - name: SONAR_CE_JAVAOPTS
              value: ""
      containers:
        - name: sonarqube
          image: sonarqube:2026.5.1-enterprise
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
          resources:
            limits:
              cpu: 800m
              ephemeral-storage: 512000M
              memory: 10240M
            requests:
              cpu: 400m
              ephemeral-storage: 1536M
              memory: 4096M
          env:
            - name: SONAR_HELM_CHART_VERSION
              value: 2026.5.1001
            - name: SONAR_WEB_SYSTEMPASSCODE
              valueFrom:
                secretKeyRef:
                  name: ingress-values.yaml-sonarqube-monitoring-passcode
                  key: SONAR_WEB_SYSTEMPASSCODE
            - name: SONAR_WEB_CONTEXT
              value: /
            - name: SONAR_WEB_JAVAOPTS
              value: ""
            - name: SONAR_CE_JAVAOPTS
              value: ""
          envFrom:
          livenessProbe:
            exec:
              command:
              - sh
              - -c
              - |
                curl --noproxy "*" -fsS -o /dev/null --max-time 5 -H "X-Sonar-Passcode: $SONAR_WEB_SYSTEMPASSCODE" "http://localhost:9000/api/system/liveness"
            failureThreshold: 6
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
              - sh
              - -c
              - |
                #!/bin/bash
                # A Sonarqube container is considered ready if the status is UP, DB_MIGRATION_NEEDED or DB_MIGRATION_RUNNING
                # status about migration are added to prevent the node to be kill while SonarQube is upgrading the database.
                if curl --noproxy "*" -s http://localhost:9000/api/system/status | grep -q -e '"status":"UP"' -e '"status":"DB_MIGRATION_NEEDED"' -e '"status":"DB_MIGRATION_RUNNING"'; then
                  exit 0
                fi
                exit 1
            failureThreshold: 6
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              scheme: HTTP
              path: /api/system/status
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 24
            timeoutSeconds: 1
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            runAsGroup: 0
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /opt/sonarqube/data
              name: sonarqube
              subPath: data
            - mountPath: /opt/sonarqube/temp
              name: sonarqube
              subPath: temp
            - mountPath: /opt/sonarqube/logs
              name: sonarqube
              subPath: logs
            - mountPath: /tmp
              name: tmp-dir
            - mountPath: /opt/sonarqube/extensions
              name: sonarqube
              subPath: extensions
      serviceAccountName: default
      volumes:
        
        - name: init-sysctl
          configMap:
            name: ingress-values.yaml-sonarqube-init-sysctl
            items:
              - key: init_sysctl.sh
                path: init_sysctl.sh
        - name: sonarqube
          emptyDir:
            {}
        - name : tmp-dir
          emptyDir:
            {}
---
# Source: sonarqube/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-values.yaml-sonarqube
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1001
    release: ingress-values.yaml
    heritage: Helm
    traffic-type: external
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
spec:
  ingressClassName: user-based
  rules:
  - host: sonarqube.your-org.com
    http:
      paths:
      - backend:
          service:
            name: someService
            port:
              number: 1010
        path: /
        pathType: ImplementationSpecific
  tls:
    - hosts:
      - chart-example.local
      secretName: chart-example-tls
---
# Source: sonarqube/templates/tests/sonarqube-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "ingress-values.yaml-ui-test"
  annotations:
    "helm.sh/hook": test-success
    # Disable Istio sidecar injection for this test pod
    "sidecar.istio.io/inject": "false"
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1001
    release: ingress-values.yaml
    heritage: Helm
spec:
  automountServiceAccountToken: false
  containers:
    - name: ingress-values.yaml-ui-test
      image: "sonarqube:2026.5.1-enterprise"
      imagePullPolicy: IfNotPresent
      command: ['curl']
      args: [
        '--retry-connrefused',
        '--retry',
        '12',
        '--retry-delay',
        '1',
        '--max-time',
        '5',
        '-s',
        'ingress-values.yaml-sonarqube:9000/api/system/status'
        ]
      resources:
        limits:
          cpu: 500m
          ephemeral-storage: 1000M
          memory: 200M
        requests:
          cpu: 500m
          ephemeral-storage: 100M
          memory: 200M
  restartPolicy: Never
